--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                 <label for="question-library-input">题库选择</label>
                 <select onchange="main(this.options[this.selectedIndex].value)">
                     <option value="lunyu_only_text">《论语》原文</option>
+                    <option value="lunyu_only_comments">《论语》注释</option>
                 </select>
             </div>
             <span></span>
