add credits footer

--- a/index.html
+++ b/index.html
@@ -67,5 +67,6 @@
             <button onclick="onSubmit()" id="submit">提交</button>
         </p>
         <div id="mistakes-container"></div>
+        <div id="credits-footer"><a href="https://github.com/LeChocolatChaud" id="personal-page-href">LeChocolatChaud</a> @ 2022</div>
     </body>
 </html>
