--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <body>
         <div id="github-div">
             <div id="source-code-div">
-                <a href="https://github.com/LeChocolatChaud/gushiwen"
+                <a href="https://github.com/LeChocolatChaud/gushiwen" id="source-code-href"
                     >源代码</a
                 >
             </div>
